--- a/css/style.css
+++ b/css/style.css
@@ -314,16 +314,20 @@ section {
     padding: 10px;
     box-sizing: border-box; }
   .contact form input[type="submit"] {
+    cursor: pointer;
     width: 200px;
     background: #333;
     border: none;
     padding: 15px 30px;
     color: white;
     float: left;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 3px; }
     @media screen and (max-width: 414px) {
       .contact form input[type="submit"] {
-        width: 100%; } }
+        width: 100%;
+        float: none; } }
 
 .footer {
   background: #000;
