--- a/scss/style.scss
+++ b/scss/style.scss
@@ -237,35 +237,6 @@ section {
       padding-right: $space_l;
     }
   }
-  // &-ornament {
-  //   .container-title {
-  //     span { // TODO: リファクタ必要（span以外を使うことも考えてclass名で指定すること）
-  //       display: inline-block;
-  //       background: #fff;
-  //       padding: 0 10px;
-  //       position: relative;
-  //       z-index: 1;
-  //     }
-  //     &:before, &:after {
-  //       border-top: 1px solid #2e1f1a;
-  //       content: "";
-  //       display: block;
-  //       position: relative;
-  //       z-index: 0;
-  //     }
-  //     &:before {
-  //       top: 28px;
-  //     }
-  //     &:after {
-  //       top: -28px;
-  //     }
-  //     &-lightGray {
-  //       span {
-  //         background: #f8f7fc;
-  //       }
-  //     }
-  //   }
-  // }
 }
 
 .top{
@@ -483,6 +454,7 @@ section {
       box-sizing: border-box;
     }
     & input[type="submit"]{
+      cursor: pointer;
       width: 200px;
       background: #333;
       border: none;
@@ -492,6 +464,7 @@ section {
       border-radius: 3px;
       @include mq() {
         width: 100%;
+        float: none;
       }
     }
   }
